fixing sidebar spacing on links

--- a/wp-content/themes/rax/style.css
+++ b/wp-content/themes/rax/style.css
@@ -1011,9 +1011,9 @@ white-space: nowrap;
 }
 
 .links-list {
-    width: 77%;
     float: left;
-    margin-right: 30px;
+    padding-right: 25px;
+    width: 78%;
 }
 
 .blogroll a {
